Layouts and activities progress

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,119 +7,75 @@
     android:addStatesFromChildren="false"
     android:animationCache="false"
     android:background="#FFFFFF"
-    android:backgroundTint="#FFFFFF"
     android:clickable="false"
     android:foregroundGravity="top|left"
     android:orientation="horizontal"
     android:screenOrientation="landscape"
     tools:context=".MainActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="-69dp"
-        tools:layout_editor_absoluteY="16dp">
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="800px"
+        android:layout_height="200px"
+        android:layout_marginTop="32dp"
+        android:background="#FFFFFF"
+        android:backgroundTint="@color/white"
+        android:backgroundTintMode="add"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo2" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:addStatesFromChildren="false"
-            android:animationCache="false"
-            android:background="#FFFFFF"
-            android:backgroundTint="#FFFFFF"
-            android:clickable="false"
-            android:foregroundGravity="top|left"
-            android:orientation="horizontal"
-            android:screenOrientation="landscape"
-            tools:context=".MainActivity">
+    <Button
+        android:id="@+id/btnView"
+        android:layout_width="226dp"
+        android:layout_height="68dp"
+        android:background="#975E33"
+        android:backgroundTint="#975E33"
+        android:onClick="Visualization"
+        android:text="@string/text_btn_view"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.229"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.725" />
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="800px"
-                android:layout_height="200px"
-                android:layout_marginStart="208dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="208dp"
-                android:layout_marginBottom="229dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/logo2" />
+    <Button
+        android:id="@+id/btnMore"
+        android:layout_width="226dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginEnd="108dp"
+        android:background="#975E33"
+        android:backgroundTint="#975E33"
+        android:onClick="More"
+        android:text="@string/text_more"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/btnView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.725" />
 
-            <Button
-                android:id="@+id/btnCad"
-                android:layout_width="226dp"
-                android:layout_height="68dp"
-                android:layout_marginStart="96dp"
-                android:layout_marginTop="152dp"
-                android:layout_marginEnd="409dp"
-                android:layout_marginBottom="93dp"
-                android:background="#975E33"
-                android:backgroundTint="#975E33"
-                android:onClick="Regi"
-                android:text="@string/text_btn_cad"
-                android:textColor="#FFFFFF"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/btnView"
-                android:layout_width="226dp"
-                android:layout_height="68dp"
-                android:layout_marginStart="410dp"
-                android:layout_marginTop="152dp"
-                android:layout_marginEnd="96dp"
-                android:layout_marginBottom="93dp"
-                android:background="#975E33"
-                android:backgroundTint="#975E33"
-                android:onClick="Visualization"
-                android:text="@string/text_btn_view"
-                android:textColor="#FFFFFF"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/btnMore"
-                android:layout_width="226dp"
-                android:layout_height="68dp"
-                android:layout_marginStart="252dp"
-                android:layout_marginTop="245dp"
-                android:layout_marginEnd="253dp"
-                android:background="#975E33"
-                android:backgroundTint="#975E33"
-                android:onClick="More"
-                android:text="@string/text_more"
-                android:textColor="#FFFFFF"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/txtGreeting"
-                android:layout_width="288dp"
-                android:layout_height="56dp"
-                android:layout_marginStart="200dp"
-                android:layout_marginTop="84dp"
-                android:layout_marginEnd="243dp"
-                android:layout_marginBottom="173dp"
-                android:background="#FFFFFF"
-                android:text="@string/text_greeting"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    <TextView
+        android:id="@+id/txtGreeting"
+        android:layout_width="288dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="27dp"
+        android:background="#FFFFFF"
+        android:text="@string/text_greeting"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
